--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -23,5 +23,6 @@ jobs:
             composer install
             php artisan optimize:clear
             php artisan migrate --force
+            php artisan db:seed TestServerSeeder
             npm install
             npm run prod
