--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "linwj/kucoin": "^1.0",
         "livewire/livewire": "^2.5",
         "owenvoke/blade-fontawesome": "^1.10"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
