--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "ascsoftw/livewire-toast": "^1.0",
         "blade-ui-kit/blade-icons": "^1.1",
         "ccxt/ccxt": "^1.63",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
         "filament/forms": "^2.4",
+        "filament/tables": "^2.5",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kucoin/kucoin-php-sdk": "~1.1.0",
