--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ascsoftw/livewire-toast": "^1.0",
+        "aws/aws-sdk-php": "^3.208",
         "blade-ui-kit/blade-icons": "^1.1",
         "ccxt/ccxt": "^1.63",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
