--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
         "postcss-import": "^14.0.1",
         "tailwindcss": "^2.2.2"
     },
-    "dependencies": {
-        "chart.js": "^3.6.2"
-    }
+    "dependencies": {}
 }
