--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "asantibanez/livewire-charts": "^2.3",
         "blade-ui-kit/blade-icons": "^1.1",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
         "filament/forms": "^2.4",
