--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "ascsoftw/livewire-toast": "^1.0",
+        "aws/aws-sdk-php": "^3.208",
         "asantibanez/livewire-charts": "^2.3",
         "blade-ui-kit/blade-icons": "^1.1",
         "ccxt/ccxt": "^1.63",
