--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "ccxt/ccxt": "^1.63",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
         "filament/forms": "^2.4",
-        "filament/tables": "^2.5",
+        "filament/tables": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kucoin/kucoin-php-sdk": "~1.1.0",
@@ -53,7 +53,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi",
+            "@php artisan config:clear",
+            "@php artisan view:clear"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
