--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "blade-ui-kit/blade-icons": "^1.1",
         "ccxt/ccxt": "^1.63",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
+        "codenix-sv/coingecko-api": "^1.0",
         "doctrine/dbal": "^3.2",
         "filament/forms": "^2.4",
         "filament/tables": "^2.0",
