ADD: Spark to project

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
-APP_NAME=Laravel
+# App
+APP_NAME="myCrypto Tax"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Logs
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -15,6 +18,7 @@ DB_DATABASE=cryptotax
 DB_USERNAME=root
 DB_PASSWORD=
 
+# Laravel base config stuff
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
@@ -22,12 +26,13 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+# Redis and Memcached
+#MEMCACHED_HOST=127.0.0.1
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
+# Mailing
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
@@ -37,18 +42,27 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# AWS
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_DEFAULT_REGION=us-east-1
+#AWS_BUCKET=
+#AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+# Pusher
+#PUSHER_APP_ID=
+#PUSHER_APP_KEY=
+#PUSHER_APP_SECRET=
+#PUSHER_APP_CLUSTER=mt1
+#MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+# Spark / Stripe
+CASHIER_CURRENCY=USD
+CASHIER_CURRENCY_LOCALE=en
+STRIPE_KEY=pk_test_example
+STRIPE_SECRET=sk_test_example
+STRIPE_WEBHOOK_SECRET=sk_test_example
 
+# Dev
 TELESCOPE_ENABLED=true
