--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -3,11 +3,11 @@ name: Deployment
 on:
   push:
     branches:
-      - main
+      - develop
 
 jobs:
   deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop'
     runs-on: [ubuntu-20.04]
     steps:
       - uses: actions/checkout@v1
