--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.4",
         "laravel/spark-stripe": "@dev",
+        "laravel/cashier": "^v12.17.0",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
