ADD: Affiliate settings

--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,18 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kucoin/kucoin-php-sdk": "~1.1.0",
+        "laravel/cashier": "^v12.17.0",
         "laravel/framework": "^8.65",
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.4",
         "laravel/spark-stripe": "@dev",
-        "laravel/cashier": "^v12.17.0",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "owenvoke/blade-fontawesome": "^1.10",
-        "webcaravel/admin": "0.0.6",
+        "spatie/laravel-settings": "^2.3",
+        "webcaravel/admin": "^0.0",
         "wireui/wireui": "^0"
     },
     "require-dev": {
