--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ STRIPE_WEBHOOK_SECRET=sk_test_example
 # Dev
 DEBUGBAR_ENABLED=false
 TELESCOPE_ENABLED=true
+
+# Settings
+SETTINGS_CACHE_ENABLED=false
