--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "andreiio/blade-iconoir": "^1.4",
         "aws/aws-sdk-php": "^3.208",
         "blade-ui-kit/blade-icons": "^1.1",
         "ccxt/ccxt": "^1.63",
