--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
     "require": {
         "php": "^8.0",
         "andreiio/blade-iconoir": "^1.4",
+        "andreiio/blade-remix-icon": "^1.1",
         "aws/aws-sdk-php": "^3.208",
-        "blade-ui-kit/blade-icons": "^1.1",
+        "blade-ui-kit/blade-icons": "^1.2",
         "ccxt/ccxt": "^1.63",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
+        "codeat3/blade-fluentui-system-icons": "^1.18",
+        "codeat3/blade-google-material-design-icons": "^1.8",
+        "codeat3/blade-iconpark": "^1.4",
+        "codeat3/blade-unicons": "^1.5",
         "codenix-sv/coingecko-api": "^1.0",
         "doctrine/dbal": "^3.2",
         "filament/forms": "^2.4",
