--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "aws/aws-sdk-php": "^3.208",
         "blade-ui-kit/blade-icons": "^1.2",
         "ccxt/ccxt": "^1.63",
+        "codeat3/blade-carbon-icons": "^2.3",
         "codeat3/blade-cryptocurrency-icons": "^1.3",
         "codeat3/blade-fluentui-system-icons": "^1.18",
         "codeat3/blade-google-material-design-icons": "^1.8",
@@ -33,6 +34,7 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "owenvoke/blade-fontawesome": "^1.10",
+        "ryangjchandler/blade-tabler-icons": "*",
         "spatie/laravel-settings": "^2.3",
         "webcaravel/admin": "^0.1",
         "wireui/wireui": "^0"
