ADD: Icon cache

--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -23,6 +23,7 @@ jobs:
             composer install
             php artisan optimize:clear
             php artisan migrate --force
+            php artisan icons:cache
             php artisan db:seed TestServerSeeder
             npm install
             npm run prod
