--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "actb/blade-github-octicons": "^4.0",
         "andreiio/blade-iconoir": "^1.4",
         "andreiio/blade-remix-icon": "^1.1",
         "aws/aws-sdk-php": "^3.208",
@@ -16,6 +17,7 @@
         "codeat3/blade-cryptocurrency-icons": "^1.3",
         "codeat3/blade-fluentui-system-icons": "^1.18",
         "codeat3/blade-google-material-design-icons": "^1.8",
+        "codeat3/blade-grommet-icons": "^1.3",
         "codeat3/blade-iconpark": "^1.4",
         "codeat3/blade-unicons": "^1.5",
         "codenix-sv/coingecko-api": "^1.0",
