fix: icons to blade icon in account secion

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "codeat3/blade-unicons": "^1.5",
         "codenix-sv/coingecko-api": "^1.0",
         "doctrine/dbal": "^3.2",
+        "eduard9969/blade-polaris-icons": "^1.0",
         "filament/forms": "^2.4",
         "filament/tables": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
@@ -36,6 +37,7 @@
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "mallardduck/blade-boxicons": "^2.2",
         "owenvoke/blade-fontawesome": "^1.10",
         "ryangjchandler/blade-tabler-icons": "*",
         "spatie/laravel-settings": "^2.3",
