--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "codeat3/blade-unicons": "^1.5",
         "codeat3/blade-vaadin-icons": "^1.3",
         "codenix-sv/coingecko-api": "^1.0",
+        "davidhsianturi/blade-bootstrap-icons": "^1.2",
         "doctrine/dbal": "^3.2",
         "eduard9969/blade-polaris-icons": "^1.0",
         "filament/forms": "^2.4",
