--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "codeat3/blade-google-material-design-icons": "^1.8",
         "codeat3/blade-grommet-icons": "^1.3",
         "codeat3/blade-iconpark": "^1.4",
+        "codeat3/blade-line-awesome-icons": "^1.2",
+        "codeat3/blade-radix-icons": "^1.4",
+        "codeat3/blade-uiw-icons": "^1.3",
         "codeat3/blade-unicons": "^1.5",
         "codeat3/blade-vaadin-icons": "^1.3",
         "codenix-sv/coingecko-api": "^1.0",
