--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "codeat3/blade-grommet-icons": "^1.3",
         "codeat3/blade-iconpark": "^1.4",
         "codeat3/blade-line-awesome-icons": "^1.2",
+        "codeat3/blade-phosphor-icons": "^1.4",
         "codeat3/blade-radix-icons": "^1.4",
         "codeat3/blade-uiw-icons": "^1.3",
         "codeat3/blade-unicons": "^1.5",
