--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "cryptoapis/sdk": "^1.4.0",
         "php": "^8.0",
         "actb/blade-github-octicons": "^4.0",
         "andreiio/blade-iconoir": "^1.4",
@@ -27,6 +26,7 @@
         "codeat3/blade-unicons": "^1.5",
         "codeat3/blade-vaadin-icons": "^1.3",
         "codenix-sv/coingecko-api": "^1.0",
+        "cryptoapis/sdk": "^1.4.0",
         "davidhsianturi/blade-bootstrap-icons": "^1.2",
         "doctrine/dbal": "^3.2",
         "eduard9969/blade-polaris-icons": "^1.0",
@@ -44,6 +44,7 @@
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "mallardduck/blade-boxicons": "^2.2",
         "owenvoke/blade-fontawesome": "^1.10",
         "ryangjchandler/blade-tabler-icons": "*",
