--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,4 @@ TELESCOPE_ENABLED=true
 # Settings
 SETTINGS_CACHE_ENABLED=false
 APP_CRYPTOS_COINGECKO_PRICES_LIFETIME=999999999999
+APP_ADMIN_MAIL=
